# rocket_blog

./: .Dockerfile  .Rocket.docker.toml  .dockerignore  .env  .env.example  .gitignore  .rocket_secret_key  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.dev.live  Dockerfile.fallback  Dockerfile.test  FEATURE_SUGGESTIONS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOGGING_DEMO.md  README-NIX.md  README.md  README_BINARIES.md  Rocket.docker.toml  Rocket.toml  TESTING.md  UI_MOCKUP.md  WORKTIME_API.md  docker-compose.dev.live.yml  docker-compose.dev.yml  docker-compose.yml  fix_tests.py  flake.nix  justfile  test_cookie.rs
apps/blog/: Cargo.toml  Rocket.toml
apps/blog/src/: config.rs  main.rs  pool.rs  registry.rs
apps/blog/src/controllers/: auth.rs  blog.rs  feed.rs  mod.rs  settings.rs
apps/blog/src/guards/: admin.rs
apps/blog/src/middleware/: mod.rs
apps/blog/src/responders/: mod.rs
apps/blog/src/services/: auth.rs  base.rs  blog.rs  comment.rs  mod.rs  ollama.rs  openai.rs  reaction.rs  settings.rs  tag.rs  youtube.rs
apps/blog/src/tests/: comprehensive_tests.rs  config_tests.rs  controllers_tests.rs  edge_case_tests.rs  features_tests.rs  mocks.rs  redirect_tests.rs  seaorm_mock_tests.rs  youtube_tests.rs
apps/blog/templates/blog/: edit.html.tera  search.html.tera
apps/blog/templates/error/: 405.html.tera
apps/hello-world/: Cargo.toml  Rocket.toml
apps/punch_clock/: .env  Cargo.toml  README.md  Rocket.toml  Rocket.toml.backup  setup.sh
apps/punch_clock/src/: main.rs
apps/punch_clock/src/controllers/: mod.rs  punch_clock.rs
apps/punch_clock/src/guards/: auth.rs  mod.rs
apps/punch_clock/src/services/: mod.rs  tests.rs  work_role.rs  work_session.rs
apps/punch_clock/static/: manifest.json  sw.js
apps/punch_clock/templates/auth/: login.html.tera
apps/punch_clock/templates/punch_clock/: _pwa_head.html.tera  dashboard.html.tera  history.html.tera  offline.html.tera
docs/: ADDITIONAL_CLEANUP.md  AI_INTEGRATION.md  API.md  ARCHITECTURE.md  BACKGROUND_AI_GENERATION.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DATABASE_CLI_SUPPORT.md  DATABASE_SUPPORT.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCKER.md  DOCKER_MULTI_APP.md  EXCERPT_INTEGRATION_EXAMPLE.md  FEATURE_SUGGESTIONS.md  MACRO_REFACTORING.md  MOBILE_UI_IMPROVEMENTS.md  MULTI_APP_STRUCTURE.md  OPENAI_INTEGRATION.md  POST_EXCERPT_IMPLEMENTATION.md  PROC_MACRO_EVALUATION.md  QUERY_BUILDER.md  REFACTORING_SUMMARY.md  SEARCH_IMPLEMENTATION.md  SHARED_AUTH.md  TAG_INTEGRATION_EXAMPLE.md  TEMPLATE_VALIDATION.md  USER_GUIDE.md  WYSIWYG_EDITOR_IMPLEMENTATION.md
migrations/: Cargo.toml  test.db
migrations/src/: lib.rs  m20220101_000001_create_tables.rs  m20240828_000001_create_work_time_tables.rs  m20240828_000002_create_notification_settings.rs  m20240828_000003_create_pay_periods.rs  m20241201_000001_add_tags.rs  m20241202_000001_add_excerpt.rs  m20241203_000001_add_fulltext_search.rs  m20241205_000001_add_settings.rs  m20241206_000001_add_background_jobs.rs  m20241206_000001_add_comment_user_association.rs  m20241207_000001_add_comment_replies.rs  m20241210_000001_add_youtube_downloads.rs  m20241212_000001_add_background_jobs.rs  m20241213_000001_add_polls.rs  m20241215_000001_fix_work_time_timezone.rs  m20241230_000001_add_settings.rs  m20250130_000001_add_tipped_role.rs  m20250130_000002_add_tips_field.rs  m20250814_061046_create_calender.rs
models/: Cargo.toml
models/src/: account.rs  background_job.rs  comment.rs  dto.rs  event.rs  lib.rs  notification_settings.rs  pay_period.rs  poll.rs  poll_option.rs  poll_vote.rs  post.rs  post_reaction.rs  post_tag.rs  prelude.rs  settings.rs  tag.rs  user_role.rs  work_time_entry.rs
nginx/: Dockerfile  entrypoint.sh  nginx.conf
nix/: module.nix
query_builder_macro/: Cargo.toml
query_builder_macro/src/: lib.rs
scripts/: README.md  docker-backup.sh  docker-deploy.sh  fix_serde_imports.sh  generate_models.sh  preserve_custom_code.py  setup-ssl.sh  validate_templates.py
scripts/docker/: .Dockerfile  .Rocket.docker.toml  .Rocket.hello-world.toml  .Rocket.punch-clock.toml  .dockerignore  Dockerfile  Dockerfile.blog  Dockerfile.blog.dev  Dockerfile.coverage  Dockerfile.dev  Dockerfile.fallback  Dockerfile.hello-world  Dockerfile.hello-world.dev  Dockerfile.punch-clock  Dockerfile.punch-clock.dev  Dockerfile.test  docker-compose.dev.live.yml  docker-compose.dev.yml  docker-compose.yml
scripts/systemd/: rocket-blog-backup.service  rocket-blog-backup.timer
shared/common/: Cargo.toml
shared/common/src/: config.rs  database.rs  lib.rs  utils.rs
shared/common/src/auth/: controller.rs  mod.rs  service.rs
shared/common/src/services/: base.rs  mod.rs  work_role.rs  work_session.rs
shared/migrations/: Cargo.toml
shared/models/: Cargo.toml
src/: config.rs  database.rs  enhanced_registry.rs  features.rs  generic.rs  lib.rs  main.rs  main.rs.backup  pool.rs  registry.rs  template_config.rs
src/controllers/: admin.rs  auth.rs  base.rs  blog.rs  comment.rs  feed.rs  handyman.rs  index.rs  mod.rs  poll.rs  portfolio.rs  seo.rs  settings.rs  worktime.rs  worktime_api.rs  worktime_auth.rs
src/dto/: mod.rs
src/examples/: macro_demo.rs  mod.rs  query_builder_example.rs  typed_builder_demo.rs
src/guards/: api.rs  mod.rs
src/middleware/: mod.rs  seeding.rs
src/services/: ai_provider.rs  auth.rs  background_job.rs  base.rs  blog.rs  comment.rs  coordinator.rs  mod.rs  (+11 more)
static/: manifest.json  robots.txt  style.css  sw.js  worktime-utils.js  worktime.css  youtube_embed_test.html
templates/: base.html.j2  base.html.tera  handyman.html.j2  handyman1.html.j2  handyman2.html.j2  handyman3.html.j2  handyman4.html.j2  index.html.tera  macros.html.tera  offline.html.j2  offline.html.tera  portfolio.html.j2  worktime_base.html.j2  worktime_base.html.tera  worktime_macros.html.j2  worktime_macros.html.tera
test/: cypress.config.js  default.nix
tests/: auth_service_tests.rs  base_service_tests.rs  blog_service_tests.rs  integration_tests.rs  main_app_tests.rs  middleware_tests.rs  route_tests.rs  tag_service_tests.rs
(+106 files in other folders)
