[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.chrono]
version = "0.4.31"
features = ["serde"]

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "serde"]

[dependencies.rocket]
version = "=0.5.0-rc.3"
features = ["http2", "json", "uuid"]

[dependencies.sea-orm]
version = "0.12"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]
