[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[dependencies.chrono]
version = "0.4.31"
features = ["serde"]

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "serde"]

[dependencies.rocket]
version = "0.5"
features = ["http2", "json", "uuid"]

[dependencies.sea-orm]
version = "1.1.1"
features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]
