[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared dependencies
common = { path = "../../shared/common" }
models = { path = "../../shared/models" }
migrations = { path = "../../shared/migrations" }

# Rocket framework
rocket = { version = "0.5", features = ["http2", "json", "uuid", "secrets"] }
rocket_dyn_templates = { version = "0.1", features = ["tera"] }
sea-orm-rocket = "0.5.5"

# Database and ORM
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }

# Date and time
chrono = { version = "0.4.31", features = ["serde"] }

# Utilities
uuid = { version = "1.4.1", features = ["v4", "serde"] }
log = "0.4.27"
fern = "0.7.1"
humantime = "2.2.0"

# Serialization
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1.74"

# Security and crypto
aes-gcm = "0.10.3"
base64 = "0.22.1"
pwhash = "1.0.0"

# AI and HTTP
async-openai = "0.20.0"
reqwest = { version = "0.11.22", features = ["json"] }

# Text processing
markdown = "1.0.0"
slug = "0.1.6"
lipsum = "0.9.1"

# Random and testing
rand = "0.8.1"
rand_mt = "5.0.0"

# File handling
mime_guess = "2.0.5"

[dev-dependencies]
tokio = { version = "1.0", features = ["test-util"] }