[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["http2", "json", "uuid", "secrets"] }
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "mock"] }
sea-orm-rocket = "0.5.5"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fern = "0.7.1"
humantime = "2.2.0"
models = { path = "../models" }
migrations = { path = "../migrations" }